Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57655

NodeInstantiator with EntityLoader delegates crashes when model changes

    XMLWordPrintable

Details

    • 170f5a89b59f3489267aaede36d7728f90b2e114

    Description

      Changing the model triggers the destructions of the created EntityLoader delegates. Somehow during the destruction it seems to be accessing an invalid MetaObject.

      Also maybe the QQuick3DEntityLoader should be using AsynchronousIfNested incubation mode.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            lemire_p Paul Lemire
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes