Only pass static metaobjects around and fix EntityLoader

- Ensure the notification changes only pass in static metaobjects.
- Make the EntityLoader use the AsynchronousIfNested incubation mode to avoid
  cases where we could destroy something still being incubated
- Add a manual test to test this cases

This fixes the crashes occurring when using NodeInstantiators and EntityLoaders
as delegates.

Change-Id: I104c60b4be34cfb843a74dd09a8b96fdac44657d
Task-number: QTBUG-57655
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>