src/core/changes/qcomponentaddedchange.cpp
@@ -41,6 +41,7 @@
 #include "qcomponentaddedchange_p.h"
 #include <Qt3DCore/qcomponent.h>
 #include <Qt3DCore/qentity.h>
+#include <private/qnode_p.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -51,7 +52,7 @@ QComponentAddedChangePrivate::QComponentAddedChangePrivate(const QEntity *entity
     : QSceneChangePrivate()
     , m_entityId(entity->id())
     , m_componentId(component->id())
-    , m_componentMetaObject(component->metaObject())
+    , m_componentMetaObject(QNodePrivate::findStaticMetaObject(component->metaObject()))
 {
 }
 
